--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -20,7 +20,8 @@ is_configured = 0
 # build = 2019.01.03.v2.12 - small fix 
 # build = 2019.01.10.v2.13 - improve mispgetioc 
 # build = 2019.01.13.v2.14 - support proxy
-build = 2019.01.13.v2.14
+# build = 2019.01.14.v2.15 - fix #45
+build = 2019.01.14.v2.15
 
 [ui]
 is_visible = true
@@ -29,7 +30,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.14
+version = 2.0.15
 
 [package]
 id = misp42splunk
