--- a/misp42splunk/default/commands.conf
+++ b/misp42splunk/default/commands.conf
@@ -12,3 +12,8 @@ chunked = true
 filename = mispsight.py
 chunked = true
 local = true
+
+[mispapireport]
+filename = mispapireport.py
+local = true
+chunked = true
