--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -21,7 +21,8 @@ is_configured = 0
 # build = 2019.01.10.v2.13 - improve mispgetioc 
 # build = 2019.01.13.v2.14 - support proxy
 # build = 2019.01.14.v2.15 - fix #45
-build = 2019.01.14.v2.15
+# build = 2019.01.16.v2.16 - partial fix #38 + mispapireport
+build = 2019.01.16.v2.16
 
 [ui]
 is_visible = true
@@ -30,7 +31,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.15
+version = 2.0.16
 
 [package]
 id = misp42splunk
