--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -19,8 +19,8 @@ tags = misp
 
 [mispgetioc-options]
 syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (date_to=<string>) ) \
-  onlyids=<y|n> category=<csv_string> type=<csv_string> pipesplit=<y|n>\
-  getuuid=<y|n> getorg=<y|n> geteventtag=<y|n> \
+  to_ids=<y|n> category=<csv_string> type=<csv_string> pipesplit=<y|n>\
+  published=<y|n> getuuid=<y|n> getorg=<y|n> geteventtag=<y|n> \
   tags=<csv_string>  not_tags=<csv_string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
 description = mispgetioc searches in MISP instance (either the one defined in app setup or\
