--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -5,7 +5,7 @@
 [install]
 state = enabled
 is_configured = 0
-# build = 2017.12.12.v1.1 - implements version 1 of mispgetioc
+# build = 2017.12.12.v1.1 - implements version 1 of mispgetioc 
 # build = 2018.11.11.v2.01 - major improvements with KV store and multi-value fields
 # build = 2018.11.11.v2.02 - remove TH components
 # build = 2018.11.12.v2.03 - fix
@@ -22,7 +22,8 @@ is_configured = 0
 # build = 2019.01.13.v2.14 - support proxy
 # build = 2019.01.14.v2.15 - fix #45
 # build = 2019.01.16.v2.16 - partial fix #38 + mispapireport
-build = 2019.01.16.v2.16
+# build = 2019.01.21.v2.17 - #49 #50
+build = 2019.01.16.v2.17
 
 [ui]
 is_visible = true
@@ -31,7 +32,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.16
+version = 2.0.17
 
 [package]
 id = misp42splunk
