--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -23,7 +23,8 @@ is_configured = 0
 # build = 2019.01.14.v2.15 - fix #45
 # build = 2019.01.16.v2.16 - partial fix #38 + mispapireport
 # build = 2019.01.21.v2.17 - #49 #50
-build = 2019.01.16.v2.17
+# build = 2019.01.21.v2.18 - #52
+build = 2019.01.16.v2.18
 
 [ui]
 is_visible = true
@@ -32,7 +33,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.17
+version = 2.0.18
 
 [package]
 id = misp42splunk
