--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -19,12 +19,13 @@ tags = misp
 
 [mispgetioc-options]
 syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (date_to=<string>) ) \
-  to_ids=<y|n> category=<csv_string> type=<csv_string> pipesplit=<y|n>\
+  to_ids=<y|n> category=<string> type=<string> pipesplit=<y|n>\
   published=<y|n> getuuid=<y|n> getorg=<y|n> geteventtag=<y|n> \
-  tags=<csv_string>  not_tags=<csv_string> \
+  tags=<string>  not_tags=<string> misp_instance=<string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
-description = mispgetioc searches in MISP instance (either the one defined in app setup or\
-  at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
+description = mispgetioc searches in MISP instance \
+  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
+  or pointing to misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
   or specific 'tags' or on contrary not having 'not_tags'.\
   To split multivalue attributes into 2 fields set boolean pipesplit to True. \
@@ -45,8 +46,10 @@ example2 = | mispsearch field=clientip onlyids=y gettag=y
 comment2 = same as example 1 with attribute tag(s) if any  
 
 [mispsearch-options]
-syntax = field=<fieldname>) onlyids=<y|n> gettag=<y|n> misp_urlv=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
+syntax = field=<string>) onlyids=<y|n> gettag=<y|n> misp_instance=<string> \
+  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
 description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
+  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
   You can filter on 'to_ids' flag\
   You may display the attribuite tag(s) (gettag=y default=n)
@@ -64,8 +67,10 @@ example2 = | mispsight field=clientip onlyids=y gettag=y
 comment2 = same as example 1 with attribute tag(s) if any  
 
 [mispsight-options]
-syntax = field=<fieldname> onlyids=<y|n> gettag=<y|n> misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>           
+syntax = field=<string> onlyids=<y|n> gettag=<y|n> misp_instance=<string> \
+  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>           
 description = mispsight takes the value of fieldname and searches in MISP instance for matching attributes.\
+  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
   You can filter on 'to_ids' flag\
   You may display the attribuite tag(s) (gettag=y default=n)
@@ -77,15 +82,16 @@ description = mispsight takes the value of fieldname and searches in MISP instan
 [mispapireport-command]
 syntax = |mispapireport <mispapireport-options>
 shortdesc = mispapireport is a wrapper to call misp api endpoint /attributes/restSearch with the same options as direct calls.
-description = mispapireport searches in MISP instance (either the one defined in app setup or \
-  at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
+description = mispapireport searches in MISP instance \
+  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
+  or misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
   There are 2 request modes \
-  1 - either you set requestmode=param (default) and then you pass additional params \
+  1 - either you set requestmode=p (default) and then you pass additional params \
   You can use almost all available options to build the request\
   i.e "page", "limit", "value", "type", "category", "org", "tags" (and "not_tags"),\
   "date_from", "date_to", "last", "eventid", "uuid", "enforceWarninglist", "to_ids"\
   "deleted", "includeEventUuid", "includeEventTags", "threat_level_id", "eventinfo"\
-  2 - or you set requestmode=json and then you past a complete valid JSON request \
+  2 - or you set requestmode=j and then you pass a complete valid JSON request \
   using json="JSON request". Some entries will be enforced \
   "returnFormat": "json" "withAttachments": "false" \
   and it returns a JSON dataset. Dict items are displayed as columns misp_*
@@ -97,33 +103,9 @@ related = misp
 tags = misp
 
 [mispapireport-options]
-syntax = requestmode=<param|json> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
-to_ids=<y|n> category=CSV_string type=CSV_string\
-tags=CSV_string  not_tags=CSV_string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
+syntax = requestmode=<p|j> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
+to_ids=<y|n> category=string type=string\
+tags=string  not_tags=string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
 limit=<int> page=<int> uuid=<string> enforceWarninglist=<y|n> deleted=<y|n> includeEventUuid=<y|n> includeEventTags=<y|n>\
+misp_instance=<string> \
 misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
-
-##################
-# mispapireport
-##################
-[mispapireport-command]
-syntax = |mispapireport (<mispapireport-options>)* 
-shortdesc = mispapireport is a wrapper to call misp api endpoint /attributes/restSearch with the same options as direct calls.
-description = mispapireport searches in MISP instance (either the one defined in app setup or\
-  at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
-  You can use almost all available options to build the request\
-  i.e "page", "limit", "value", "type", "category", "org", "tags" (and "not_tags"),\
-  "date_from", "date_to", "last", "eventid", "uuid", "enforceWarninglist", "to_ids"\
-  "deleted", "includeEventUuid", "includeEventTags", "threat_level_id", "eventinfo"\
-  and it returns a JSON dataset. Dict items are displayed as columns misp_*
-example1 = | mispapireport last=100d
-comment1 = retrieve attributes of all events published in last 100 days.
-usage = public
-related = misp
-tags = misp
-
-[mispapireport-options]
-syntax = eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> to_ids=<y|n> category=CSV_string type=CSV_string\
-tags=CSV_string  not_tags=CSV_string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
-limit=<int> page=<int> uuid=<string> enforceWarninglist=<y|n> deleted=<y|n> includeEventUuid=<y|n> includeEventTags=<y|n>\
-misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n
