--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -24,7 +24,8 @@ is_configured = 0
 # build = 2019.01.16.v2.16 - partial fix #38 + mispapireport
 # build = 2019.01.21.v2.17 - #49 #50
 # build = 2019.01.21.v2.18 - #52
-build = 2019.01.16.v2.18
+# build = 2019.02.02.v2.1.0 - multi instances
+build = 2019.02.02.v2.1.0
 
 [ui]
 is_visible = true
@@ -33,7 +34,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.0.18
+version = 2.1.0
 
 [package]
 id = misp42splunk
