--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -80,12 +80,12 @@ shortdesc = mispapireport is a wrapper to call misp api endpoint /attributes/res
 description = mispapireport searches in MISP instance (either the one defined in app setup or \
   at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
   There are 2 request modes \
-  1 - either you set requestmode=param (default) and then you pass additional params \
+  1 - either you set requestmode=p (default) and then you pass additional params \
   You can use almost all available options to build the request\
   i.e "page", "limit", "value", "type", "category", "org", "tags" (and "not_tags"),\
   "date_from", "date_to", "last", "eventid", "uuid", "enforceWarninglist", "to_ids"\
   "deleted", "includeEventUuid", "includeEventTags", "threat_level_id", "eventinfo"\
-  2 - or you set requestmode=json and then you past a complete valid JSON request \
+  2 - or you set requestmode=j and then you pass a complete valid JSON request \
   using json="JSON request". Some entries will be enforced \
   "returnFormat": "json" "withAttachments": "false" \
   and it returns a JSON dataset. Dict items are displayed as columns misp_*
@@ -97,33 +97,8 @@ related = misp
 tags = misp
 
 [mispapireport-options]
-syntax = requestmode=<param|json> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
-to_ids=<y|n> category=CSV_string type=CSV_string\
-tags=CSV_string  not_tags=CSV_string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
+syntax = requestmode=<p|j> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
+to_ids=<y|n> category=string type=string\
+tags=string  not_tags=string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
 limit=<int> page=<int> uuid=<string> enforceWarninglist=<y|n> deleted=<y|n> includeEventUuid=<y|n> includeEventTags=<y|n>\
 misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
-
-##################
-# mispapireport
-##################
-[mispapireport-command]
-syntax = |mispapireport (<mispapireport-options>)* 
-shortdesc = mispapireport is a wrapper to call misp api endpoint /attributes/restSearch with the same options as direct calls.
-description = mispapireport searches in MISP instance (either the one defined in app setup or\
-  at misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
-  You can use almost all available options to build the request\
-  i.e "page", "limit", "value", "type", "category", "org", "tags" (and "not_tags"),\
-  "date_from", "date_to", "last", "eventid", "uuid", "enforceWarninglist", "to_ids"\
-  "deleted", "includeEventUuid", "includeEventTags", "threat_level_id", "eventinfo"\
-  and it returns a JSON dataset. Dict items are displayed as columns misp_*
-example1 = | mispapireport last=100d
-comment1 = retrieve attributes of all events published in last 100 days.
-usage = public
-related = misp
-tags = misp
-
-[mispapireport-options]
-syntax = eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> to_ids=<y|n> category=CSV_string type=CSV_string\
-tags=CSV_string  not_tags=CSV_string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
-limit=<int> page=<int> uuid=<string> enforceWarninglist=<y|n> deleted=<y|n> includeEventUuid=<y|n> includeEventTags=<y|n>\
-misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n
