--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -24,7 +24,7 @@ syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (dat
   tags=<string>  not_tags=<string> misp_instance=<string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
 description = mispgetioc searches in MISP instance \
-  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
+  Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   or pointing to misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
   You can filter on 'category' or 'type' of attributes, on attributes having the 'to_ids' flag\
   or specific 'tags' or on contrary not having 'not_tags'.\
@@ -49,7 +49,7 @@ comment2 = same as example 1 with attribute tag(s) if any
 syntax = field=<string>) onlyids=<y|n> gettag=<y|n> misp_instance=<string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
 description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
-  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
+  Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
   You can filter on 'to_ids' flag\
   You may display the attribuite tag(s) (gettag=y default=n)
@@ -70,7 +70,7 @@ comment2 = same as example 1 with attribute tag(s) if any
 syntax = field=<string> onlyids=<y|n> gettag=<y|n> misp_instance=<string> \
   misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>           
 description = mispsight takes the value of fieldname and searches in MISP instance for matching attributes.\
-  Another MISP instance from lookups\misp_instances.csv can be used with field misp_instance \
+  Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
   You can filter on 'to_ids' flag\
   You may display the attribuite tag(s) (gettag=y default=n)
