--- a/misp42splunk/default/app.conf
+++ b/misp42splunk/default/app.conf
@@ -25,7 +25,8 @@ is_configured = 0
 # build = 2019.01.21.v2.17 - #49 #50
 # build = 2019.01.21.v2.18 - #52
 # build = 2019.02.02.v2.1.0 - multi instances
-build = 2019.02.02.v2.1.0
+# build = 2019.02.06.v2.1.1 - #56
+build = 2019.02.06.v2.1.1
 
 [ui]
 is_visible = true
@@ -34,7 +35,7 @@ label = MISP42
 [launcher]
 author = Remi Seguy
 description = MISP App for Splunk
-version = 2.1.0
+version = 2.1.1
 
 [package]
 id = misp42splunk
