#56 and multivalue attribute uuid field

--- a/misp42splunk/default/savedsearches.conf
+++ b/misp42splunk/default/savedsearches.conf
@@ -1,5 +1,5 @@
 # http://docs.splunk.com/Documentation/CIM/4.12.0/User/Malware
-[MISP_getioc_filename_object_last1d]
+[MISP_getioc_filename-related_last1d]
 action.email.useNSSubject = 1
 alert.track = 0
 cron_schedule = 0 0 * * *
@@ -12,236 +12,11 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-enableSched = 1
+enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename,md5,sha1,sha256,sha512,ssdeep" geteventtag=y\
-| where misp_object_id != 0 and (isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256)  or isnotnull(misp_sha512) or isnotnull(misp_ssdeep))\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_filename_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 10 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_filename)\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_md5_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 20 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="md5" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_md5)\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_sha1_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 30 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="sha1" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_sha1)\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_sha256_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 40 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="sha256" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_sha256)\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_sha512_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 50 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="sha512" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_sha512)\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_ssdeep_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 0 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="ssdeep" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_ssdeep)\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_fn_md5_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 10 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename|md5" geteventtag=y\
-| where misp_object_id == 0\
-| rex field="misp_filename|md5" "(?<misp_filename>.*)\|(?<misp_md5>{32})$"\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_fn_sha1_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 20 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename|sha1" geteventtag=y\
-| where misp_object_id == 0\
-| rex field="misp_filename|sha1" "(?<misp_filename>.*)\|(?<misp_sha1>{40})$"\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_fn_sha256_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 30 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename|sha256" geteventtag=y\
-| where misp_object_id == 0\
-| rex field="misp_filename|sha256" "(?<misp_filename>.*)\|(?<misp_sha256>{64})$"\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_fn_sha512_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 40 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename|sha512" geteventtag=y\
-| where misp_object_id == 0\
-| rex field="misp_filename|sha512" "(?<misp_filename>.*)\|(?<misp_sha512>{128})$"\
-| outputlookup MISP_filename append=true
-
-[MISP_getioc_fn_sssdeep_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 40 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="filename|ssdeep" geteventtag=y\
-| where misp_object_id == 0\
-| rex field="misp_filename|ssdeep" "^(?<misp_filename>[^\|]+)\|(?<misp_ssdeep>.*)$"\
+search = | mispgetioc last=1d getuuid=y getorg=y geteventtag=y pipesplit=y \ type="filename,md5,sha1,sha256,sha512,ssdeep,filename|md5,filename|sha1,filename|sha256,filename|sha512,filename|ssdeep" \ 
+| where isnotnull(misp_filename) or isnotnull(misp_md5) or isnotnull(misp_sha1) or isnotnull(misp_sha256) or isnotnull(misp_sha512) or isnotnull(misp_ssdeep) \
 | outputlookup MISP_filename append=true
 
 
@@ -259,134 +34,13 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-enableSched = 1
+enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="domain,ip-dst,ip-src,url,user_agent" geteventtag=y\
-| where misp_object_id != 0 and (isnotnull(misp_domain) or isnotnull(misp_ip_dst) or isnotnull(misp_ip_src) or isnotnull(misp_url)  or isnotnull(misp_user_agent))\
-| eval misp_user_agent_length=if(isnotnull(misp_user_agent),len(misp_user_agent),'')\
-| outputlookup MISP_web append=true
-
-[MISP_getioc_domain_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 15 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="domain" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_domain)\
-| outputlookup MISP_web append=true
-
-[MISP_getioc_ip_dst_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 25 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="ip-dst" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_ip_dst)\
-| outputlookup MISP_web append=true
-
-[MISP_getioc_ip_src_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 35 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="ip-src" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_ip_src)\
-| outputlookup MISP_web append=true
-
-[MISP_getioc_url_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 45 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="url" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_url)\
-| outputlookup MISP_web append=true
-
-[MISP_getioc_user_agent_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 55 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="user_agent" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_user_agent)\
-| eval misp_user_agent_length=len(misp_user_agent)\
-| outputlookup MISP_web append=true
-
-[MISP_getioc_domain_ip_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 5 1 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="domain|ip" geteventtag=y\
-| where misp_object_id == 0\
-| rex field="misp_domain|ip" "^(?<misp_domain>[^\|]+)\|(?<misp_ip_dst>.*)$"\
+search = | mispgetioc last=1d getuuid=y getorg=y pipesplit=y geteventtag=y \
+type="domain,ip-dst,ip-src,url,user_agent,domain|ip" \
+| where isnotnull(misp_domain) or isnotnull(misp_ip_dst) or isnotnull(misp_ip_src) or isnotnull(misp_url) or isnotnull(misp_user_agent) \
+| eval misp_user_agent_length=if(isnotnull(misp_user_agent),len(misp_user_agent),'') \
 | outputlookup MISP_web append=true
 
 
@@ -404,91 +58,11 @@ display.page.search.mode = verbose
 display.page.search.tab = statistics
 display.visualizations.charting.chart = bar
 display.visualizations.show = 0
-enableSched = 1
+enableSched = 0
 request.ui_dispatch_app = misp42splunk
 request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="email-attachment,email-src,email-src-display-name,email-subject" geteventtag=y\
-| where misp_object_id != 0 and (isnotnull(misp_email_attachment) or isnotnull(misp_email_src) or isnotnull(misp_email_src_display_name) or isnotnull(misp_email_subject))\
-| outputlookup MISP_email append=true
-
-[MISP_getioc_email_attachment_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 13 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="email-attachment" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_email_attachment)\
-| outputlookup MISP_email append=true
-
-[MISP_getioc_email_src_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 23 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="email-src" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_email_src)\
-| outputlookup MISP_email append=true
-
-[MISP_getioc_email_src_display_name_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 33 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="email-src-display-name" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_email_src_display_name)\
-| outputlookup MISP_email append=true
-
-[MISP_getioc_email_subject_last1d]
-action.email.useNSSubject = 1
-alert.track = 0
-cron_schedule = 43 0 * * *
-dispatch.earliest_time = -24h@h
-dispatch.latest_time = now
-display.events.fields = ["host"]
-display.general.timeRangePicker.show = 0
-display.general.type = statistics
-display.page.search.mode = verbose
-display.page.search.tab = statistics
-display.visualizations.charting.chart = bar
-display.visualizations.show = 0
-enableSched = 1
-request.ui_dispatch_app = misp42splunk
-request.ui_dispatch_view = search
-search = | mispgetioc last=1d getuuid=y getorg=y type="email-subject" geteventtag=y\
-| where misp_object_id == 0 and isnotnull(misp_email_subject)\
+search = | mispgetioc last=1d getuuid=y getorg=y geteventtag=y type="email-attachment,email-src,email-src-display-name,email-subject" \
+| where isnotnull(misp_email_attachment) or isnotnull(misp_email_src) or isnotnull(misp_email_src_display_name) or isnotnull(misp_email_subject) \
 | outputlookup MISP_email append=true
 
 
