--- a/misp42splunk/default/searchbnf.conf
+++ b/misp42splunk/default/searchbnf.conf
@@ -19,10 +19,10 @@ tags = misp
 
 [mispgetioc-options]
 syntax = ( eventid=<int>(,<int>)* |  last=<int>(d|h|m) | date_from=<string> (date_to=<string>) ) \
-  to_ids=<y|n> category=<string> type=<string> pipesplit=<y|n>\
-  published=<y|n> getuuid=<y|n> getorg=<y|n> geteventtag=<y|n> \
+  to_ids=<bool> category=<string> type=<string> pipesplit=<bool>\
+  published=<bool> getuuid=<bool> add_description=<bool> getorg=<bool> geteventtag=<bool> \
   tags=<string>  not_tags=<string> misp_instance=<string> \
-  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
+  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
 description = mispgetioc searches in MISP instance \
   Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   or pointing to misp_url URL with misp_key checking the certificate or not (misp_verifycert).\
@@ -46,8 +46,8 @@ example2 = | mispsearch field=clientip onlyids=y gettag=y
 comment2 = same as example 1 with attribute tag(s) if any  
 
 [mispsearch-options]
-syntax = field=<string>) onlyids=<y|n> gettag=<y|n> misp_instance=<string> \
-  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
+syntax = field=<string>) onlyids=<bool> gettag=<bool> misp_instance=<string> \
+  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
 description = mispsearch takes the value of fieldname and searches in MISP instance for matching attributes.\
   Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
@@ -67,8 +67,8 @@ example2 = | mispsight field=clientip onlyids=y gettag=y
 comment2 = same as example 1 with attribute tag(s) if any  
 
 [mispsight-options]
-syntax = field=<string> onlyids=<y|n> gettag=<y|n> misp_instance=<string> \
-  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>           
+syntax = field=<string> onlyids=<bool> gettag=<bool> misp_instance=<string> \
+  misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>           
 description = mispsight takes the value of fieldname and searches in MISP instance for matching attributes.\
   Another MISP instance from lookups/misp_instances.csv can be used with field misp_instance \
   MISP instance settings can be overwritten using (misp_url, misp_key, misp_verifycert).\
@@ -104,8 +104,8 @@ tags = misp
 
 [mispapireport-options]
 syntax = requestmode=<p|j> eventid="<int>(,<int>)*" last=<int>dhm date_from=<string> date_to=<string> \
-to_ids=<y|n> category=string type=string\
+to_ids=<bool> category=string type=string\
 tags=string  not_tags=string threat_level_id=<int> org=<string> value=<string> eventinfo=<string>\
-limit=<int> page=<int> uuid=<string> enforceWarninglist=<y|n> deleted=<y|n> includeEventUuid=<y|n> includeEventTags=<y|n>\
+limit=<int> page=<int> uuid=<string> enforceWarninglist=<bool> deleted=<bool> includeEventUuid=<bool> includeEventTags=<bool>\
 misp_instance=<string> \
-misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<y|n>
+misp_url=https://host:port misp_key=misp-authorization-key misp_verifycert=<bool>
